Added info in html

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>EdilssonBravo</title>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet">
     </head>
-    <body>
+    <body align="center">
         <div id="header"></div>
         <div id="content"></div>
         <div id="footer"></div>
+        <img src="EB.jpg" alt="">
         <h1>EdilssonBravo</h1>
-        <p>Esto es lo que soy</p>
+        <p>Under construction</p>
+        <p>Contact: yo@edilssonbravo.me</p>
+        <p>(+56-9) 872 362 59</p>
     </body>
 </html>
