Index modification, added blog link

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
         <title>EdilssonBravo</title>
 
     </head>
-    <body align="center">
-        <div id="header"></div>
-        <div id="content"></div>
-        <div id="footer"></div>
-        <img src="EB.jpg" alt="">
-        <h1>EdilssonBravo</h1>
-        <p>Under construction</p>
-        <p>Contact: yo@edilssonbravo.me</p>
-        <p>(+56-9) 872 362 59</p>
+    <body>
+        <div align="center">
+            <div id="header"></div>
+            <div id="content"></div>
+            <div id="footer"></div>
+            <img src="EB.jpg" alt="">
+            <h1>EdilssonBravo</h1>
+            <p>Under construction</p>
+            <p>Contact: yo@edilssonbravo.me</p>
+            <p><a href="http://blog.edilssonbravo.me">http://blog.edilssonbravo.me</a></p>
+        </div>
     </body>
 </html>
